fixed main logo on index

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<a href="#" class="image main"><img src="images/logo.jpg" style="min-width:20%" style="max-width:80%"/></a>
+						<a class="image main"><img src="images/logo.png" style="min-width:20%" style="max-width:80%"/></a>
 					</div>
 
 				<!-- Nav -->
