--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<a class="image main"><img src="images/logo.png" style="min-width:20%" style="max-width:80%"/></a>
+						<a class="image main"><img src="images/Logo.png" style="min-width:20%" style="max-width:80%"/></a>
 					</div>
 
 				<!-- Nav -->
