Added Band Bio and links to socials

--- a/dates.html
+++ b/dates.html
@@ -34,10 +34,10 @@
 						<li><a href="dates.html">Dates</a></li>
 					</ul>
 					<ul class="icons">
-						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon brands fa-spotify"><span class="label">Spotify</span></a></li>
+						<li><a href="https://www.youtube.com/channel/UCQajSMUynGU5o4eviVJX9tA" target="_blank" class="icon brands fa-youtube"><span class="label">YouTube</span></a></li>
+						<li><a href="https://www.facebook.com/sloanwoolly" target="_blank" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+						<li><a href="https://instagram.com/sloanwoolly" target="_blank" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+						<li><a href="https://open.spotify.com/artist/1FjlamGw1yujLTXEALUAGf?si=tZoFvJ8OSFe3j4nN7-o19g" target="_blank" class="icon brands fa-spotify"><span class="label">Spotify</span></a></li>
 					</ul>
 				</nav>
 				
