--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
 							<li><a href="dates.html">Dates</a></li>
 						</ul>
 						<ul class="icons">
-							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon brands fa-spotify"><span class="label">Spotify</span></a></li>
+							<li><a href="https://www.youtube.com/channel/UCQajSMUynGU5o4eviVJX9tA" target="_blank" class="icon brands fa-youtube"><span class="label">YouTube</span></a></li>
+							<li><a href="https://www.facebook.com/sloanwoolly" target="_blank" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+							<li><a href="https://instagram.com/sloanwoolly" target="_blank" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+							<li><a href="https://open.spotify.com/artist/1FjlamGw1yujLTXEALUAGf?si=tZoFvJ8OSFe3j4nN7-o19g" target="_blank" class="icon brands fa-spotify"><span class="label">Spotify</span></a></li>
 						</ul>
 					</nav>
 
@@ -57,11 +57,16 @@
 								</header>
 								<h3>Bio</h3>
 								<blockquote>Like if the bastard lovechild of the Rolling Stones and the Talking heads never made it past the screaming phase in childhood development</blockquote>
-								<p>In 1973, a Jukebox exploded at your parents’ favorite record store, and Sloan Woolly is the last record salvaged from the rubble. Sloan Woolly is ALIVE and here to tell the rip-roarin’, lighter-burnin’, rootin’ tootin’ tale of Rock ‘N’ Roll. It’s an old story, but it still can be told well. Sloan Woolly is too busy dreaming of slobs in the mud at Woodstock to take themselves too seriously. The only thing on their mind is that every single audience member walks away with an experience. Did you feel some in your face energy? For sure. Did you get covered in sweat and PBR? Sorry about that. Do you plan on seeing these guys EVERY time they’re in town? Hell yeah.</p>
-								<p>With a wide range of sounds and influences, Sloan Woolly brings a big ole’ jukebox of original material to every performance: from the horn-backed party stomper, “Rest of Their Lives,” to the darkroom acid trip of “The Phone,” rounded out by the Nashville-fueled blues rocker “Futures,” it’s difficult to pin down a singular direction for this rag-tag bunch of ramblers.</p>
-								<p>At the start of 2020, Sloan Woolly made their way to Nashville’s own Sputnik Sound (Vance Powell/Mitch Dane) to record some favorites from their catalog. Working with Engineer Mike Fahey, Sloan Woolly was in a place to take their recorded material to the next level. Fahey’s vast experience with iconic rock groups like the Raconteurs and Phish (along with some bad mf amps) brought the passion and energy of a Sloan Woolly show to life on the record. Sloan Woolly will be releasing five songs from these sessions over the next year with plans to record their debut album with Fahey by the end of 2020.								</p>
-								<p>Sloan Woolly was founded by Jack Seigenthaler, Henry Ingram and former Keyboard Player Trent Peltz while studying at Stanford University. Under the name Mammoth, they were later joined by Ben Josie and played countless shows around the San Francisco Bay Area for two and a half years. Upon graduation, the band moved to Nashville, Tennessee to play with and learn from everybody that Music City has to offer.</p>
-							</article>
+								<p>In 1973, a Jukebox exploded at your parents’ favorite record store and Sloan Woolly is the last record salvaged from the rubble. With a smirk and a scream, the band pairs sly arrangements and lyricism with an ageless rock’n’roll energy. It’s the stuff to make you smile, and think, and, above all, dance. Every live show is holy for the Woolly (read: hairy) crew, a chance to give everything they’ve got to everyone in the room. You’ll sweat, you’ll laugh, you’ll sing along--and you’ll come ‘round again the next time they’re in town. It’s an old story, but it still can be told well.</p>
+
+								<p>With a wide range of sounds and influences, Sloan Woolly packs up a  fat suitcase of original material to bring to every show: from the horn-backed party stomper, “Rest of Their Lives,” to the darkroom acid trip of “The Phone,” to the Nashville-fueled blues rocker “Futures,” it’s tough to pin down a singular direction for this bunch of ramblers.</p>
+
+								<p>At the start of 2020, Sloan Woolly made their way to Nashville’s Sputnik Sound (Vance Powell/Mitch Dane) to track some favorites from their catalog with engineer Mike Fahey, whose experience with iconic rock groups like the Raconteurs and Phish (along with some bad mf amps) enabled him to bring the passion and energy of a Sloan Woolly show to life on the record. The band will be releasing six songs from these sessions over the next year, with plans to cut their debut album with Fahey by the end of 2020.</p>
+
+								<p>Their first single, “Rest of Their Lives,” was lauded by alt-rock blog Parapop as “a time machine where[in] you can’t help but dance. Full of nostalgia, you briefly forget the weight in your shoulders.” It earned airplay on Nashville’s own Roots Radio, and a video of Sloan Woolly performing the single will air on CMT on May 20th.</p>
+
+								<p>Sloan Woolly was founded by Jack Seigenthaler (Guitar and Vocals), Henry Ingram (Keys) and while studying at Stanford University. Under the name Mammoth, they were later joined by Ben Josie (Bass) and played countless shows around the San Francisco Bay Area for two and a half years. Upon graduation, the band moved to Nashville, Tennessee to play with and learn from everyone they could in Music City.</p>
+</article>
 
 						<!-- Footer -->
 
