--- a/ears.html
+++ b/ears.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+d<!DOCTYPE HTML>
 <!--
 	Massively by HTML5 UP
 	html5up.net | @ajlkn
@@ -34,10 +34,10 @@
 						<li><a href="dates.html">Dates</a></li>
 					</ul>
 					<ul class="icons">
-						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon brands fa-spotify"><span class="label">Spotify</span></a></li>
+						<li><a href="https://www.youtube.com/channel/UCQajSMUynGU5o4eviVJX9tA" target="_blank" class="icon brands fa-youtube"><span class="label">YouTube</span></a></li>
+						<li><a href="https://www.facebook.com/sloanwoolly" target="_blank" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+						<li><a href="https://instagram.com/sloanwoolly" target="_blank" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+						<li><a href="https://open.spotify.com/artist/1FjlamGw1yujLTXEALUAGf?si=tZoFvJ8OSFe3j4nN7-o19g" target="_blank" class="icon brands fa-spotify"><span class="label">Spotify</span></a></li>
 					</ul>
 				</nav>
 				
@@ -55,7 +55,6 @@
 									<h1 style="color:rgb(164, 88, 235)">Rest of Their Lives</h1>
 									<iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/track=3930156366/size=large/bgcol=333333/linkcol=9a64ff/tracklist=false/artwork=small/transparent=true/" seamless><a href="http://sloanwoolly.bandcamp.com/track/rest-of-their-lives">Rest of Their Lives by Sloan Woolly</a></iframe>
 									<h3>STREAMING EVERYWHERE</h3>
-									<h3>May 1st, 2020</h3>
 								</section>
 
 					</div>
