Added press page, added songs to ears

--- a/dates.html
+++ b/dates.html
@@ -32,6 +32,7 @@
 						<li><a href="ears.html">Ears</a></li>
 						<li><a href="eyes.html">Eyes</a></li>
 						<li><a href="dates.html">Dates</a></li>
+                        <li><a href="press.html">Press</a></li>
 					</ul>
 					<ul class="icons">
 						<li><a href="https://www.youtube.com/channel/UCQajSMUynGU5o4eviVJX9tA" target="_blank" class="icon brands fa-youtube"><span class="label">YouTube</span></a></li>
@@ -56,8 +57,8 @@
 							<li>
 								<span class ="date">July<strong>3</strong></span>
 								<h3>The High Watt</h3>
-								<p>with Down Boy</p>
-								<p>and DE3RA</p>
+								<p>with The Blackfoot Gypsies</p>
+								<p>and Say Kids</p>
 								<p>Nashville, TN</p>
 							</li>
 							<li>
