--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 							<li><a href="ears.html">Ears</a></li>
 							<li><a href="eyes.html">Eyes</a></li>
 							<li><a href="dates.html">Dates</a></li>
+							<li><a href="press.html">Press</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.youtube.com/channel/UCQajSMUynGU5o4eviVJX9tA" target="_blank" class="icon brands fa-youtube"><span class="label">YouTube</span></a></li>
